mail-sender/src/main/java/com/example/mailsender/error/exception/BusinessException.java
package com.example.mailsender.error.exception;

import com.example.mailsender.error.ErrorCode;
import lombok.Getter;
import lombok.RequiredArgsConstructor;

@Getter
@RequiredArgsConstructor
public class BusinessException extends RuntimeException {
    private final ErrorCode errorCode;
}
